c4prj1_deck/grade.txt
Grading at Sun Aug  9 06:42:20 UTC 2020
Compiling deck.c -> deck.o
deck.c: In function ‘add_empty_card’:
deck.c:69:8: error: ‘card’ undeclared (first use in this function)
   free(card);
        ^
deck.c:69:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation of deck.c failed

Overall Grade: F
